infrastructure/ingress-nginx/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"nginx-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"http":{"paths":[{"backend":{"service":{"name":"nginx","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2026-06-13T12:47:31Z"
    generation: 1
    name: nginx-ingress
    namespace: default
    resourceVersion: "730074"
    uid: 37c8e436-344c-457a-ab2a-e1dd13458e10
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: nginx
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"laravel-ingress","namespace":"kubequest"},"spec":{"ingressClassName":"nginx","rules":[{"host":"laravel.local","http":{"paths":[{"backend":{"service":{"name":"laravel-svc","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2026-06-14T11:20:58Z"
    generation: 1
    name: laravel-ingress
    namespace: kubequest
    resourceVersion: "730073"
    uid: 2ad6e8a6-5b76-4fd3-9b6f-e390828f5ed7
  spec:
    ingressClassName: nginx
    rules:
    - host: laravel.local
      http:
        paths:
        - backend:
            service:
              name: laravel-svc
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
